Comment collaps css fix.

--- a/dj_tagged/siteModel/static/siteModel/style.css
+++ b/dj_tagged/siteModel/static/siteModel/style.css
@@ -113,7 +113,7 @@ div.markhelp {
 
 div.collapsed {
     overflow: hidden;
-    height: 20px;
+    height: 18px;
 }
 
 #wrapper {
